all functions working correctly, tweaking layout and text

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,26 +1,19 @@
-/* body {
-    height: 100%; */
-    /* margin:1rem; */
+body, nav{
+  text-align: center;
+  justify-content: center;
+  margin: 1rem auto;
+  width: 600px;
 
-    /* background-color: rgb(225, 220, 250);
-} */
-
-
-main {
-    /* height: 100%; */
-    margin: auto;
-    /* width: 600px; */
-    /* display: flex; */
-    border: solid 1px;
-    /* display: flex; */
-    /* align-items: center; */
-    /* justify-content: center; */
-    /* text-align: center; */
 }
 
-/* main.div{
-    padding: 20px;
-    
+main {
+    height: 100%;
+    border: solid 1px;
+    /* align-items: center; */
+}
+
+.main-content {
+  /* margin: 0 auto; */
 }
 
 .footer, .push {
@@ -28,17 +21,11 @@ main {
 } */
 
 
-html, body {
-  height: auto;
-  margin: 0;
-}
+
 .content {
   min-height: 50%;
 }
-/* .content-inside {
-  padding: 20px;
-  padding-bottom: 50px;
-} */
+
 
 body {
   font: 16px Sans-Serif;
